[package]
name = "cursebox"
version = "0.2.7"
authors = [
    "Greg Chapple <gregchapple1@gmail.com>",
    "Tom Jakubowski <tom@crystae.net>",
    "M Farkas-Dyck <m.farkasdyck@gmail.com>",
]

license = "MIT"
description = "Cell-grid TTY UI library"
repository = "https://github.com/strake/cursebox.rs"
homepage = "https://github.com/strake/cursebox.rs"

[dependencies]
buf = "0.2"
containers = { version = "0.9.0", default-features = false }
derivate = "0.1.0"
flags = "0.1"
i-o = "0.4.3"
libc = { version = "0.2", default-features = false }
loca = "0.7"
null-terminated = "0.3.3"
ptr = "0.2.1"
slot = "0.2.4"
subslice = "0.2.0"
syscall = "0.2"
tempus = { version = "0.2.3", features = ["libc"] }
unix = "0.6.7"
unix-signal = "0.1"
unix-tty = "0.3"
util = "0.1.1"

[build-dependencies]
cc = "1"

[dev-dependencies]
default_allocator = "0.3"
