[package]
name = "cursebox"
version = "0.2.10"
authors = [
    "Greg Chapple <gregchapple1@gmail.com>",
    "Tom Jakubowski <tom@crystae.net>",
    "M Farkas-Dyck <m.farkasdyck@gmail.com>",
]

license = "MIT"
description = "Cell-grid TTY UI library"
repository = "https://github.com/strake/cursebox.rs"
homepage = "https://github.com/strake/cursebox.rs"

[dependencies]
buf = "0.2"
chn = "0.1"
containers = { version = "0.9.0", default-features = false }
flags = "0.1"
i-o = "0.4.3"
libc = { package = "libc-interface", version = "0.1" }
loca = "0.7"
null-terminated = "0.3.3"
ptr = "0.2.1"
subslice = "0.2.0"
system-call = "0.1.2"
tempus = { version = "0.2.3", features = ["libc"] }
unix = "0.6.7"
unix-signal = "0.1"
unix-tty = "0.3"
util = "0.1.1"
